--- a/code/RealDataInference.ipynb
+++ b/code/RealDataInference.ipynb
@@ -41,6 +41,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84a1deb4",
+   "metadata": {},
+   "source": [
+    "In this notebook we demonstrate how to use our methods on real world data. Here we use the Douban data, and we subsampling a very small graph to keep the experiment short. \n",
+    "\n",
+    "# Extraction of the Douban subgraph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "382efbf6",
@@ -149,6 +159,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f57a536",
+   "metadata": {},
+   "source": [
+    "# Inference on Real World Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "998197d5",
@@ -242,6 +260,8 @@
    "id": "7ce27115",
    "metadata": {},
    "source": [
+    "# Visualisation of the inference procedure\n",
+    "\n",
     "We then display the trace plots, credibility intervals, posterior predictive of the degree distribution and convergence diagnostics. \n",
     "\n",
     "## Trace plots of the hyperparameters  "
@@ -249,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "69190fe9",
    "metadata": {},
    "outputs": [
