--- a/code/SyntheticSamplingAndInference.ipynb
+++ b/code/SyntheticSamplingAndInference.ipynb
@@ -299,6 +299,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Visualisation of the inference procedure\n",
+    "\n",
+    "\n",
     "We then display the trace plots, credibility intervals and posterior predictive of the degree distribution.\n",
     "\n",
     "## Trace plots of the hyperparameters  "
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
