--- a/code/RealDataInference.ipynb
+++ b/code/RealDataInference.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8514d7a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import important library \n",
+    "# Import important library\n",
+    "from src.display.plot_mean_w_ci import plot_mean_w_ci\n",
+    "from src.inference.GraphMCMCclass import *\n",
+    "from src.display.plotposteriorpredictivedegreedistrib import plot_posterior_predictive_degree\n",
+    "from src.utils.pSampling import *\n",
+    "from src.utils.SaveData import *\n",
+    "from src.inference.Graphmcmcsamples import *\n",
+    "from src.utils.ConvertArviZ import *\n",
+    "from src.utils.CootoNetworkX import *\n",
+    "from src.utils.AuxiliaryFunc import *\n",
+    "from src.models.GraphModelclass import *\n",
+    "from src.models.mGGclass import *\n",
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
@@ -21,23 +32,7 @@
     "\n",
     "sys.path.append('.')\n",
     "\n",
-    "# Internal inmport\n",
-    "\n",
-    "from src.models.RapidCRMclass import *\n",
-    "from src.models.GraphModelclass import *\n",
-    "\n",
-    "from src.utils.AuxiliaryFunc import *\n",
-    "from src.utils.CootoNetworkX import *\n",
-    "from src.utils.ConvertArviZ import *\n",
-    "\n",
-    "from src.inference.GraphMCMCclass import * \n",
-    "from src.inference.Graphmcmcsamples import *\n",
-    "\n",
-    "from src.utils.SaveData import *\n",
-    "from src.utils.pSampling import *\n",
-    "\n",
-    "from src.display.plotposteriorpredictivedegreedistrib import plot_posterior_predictive_degree\n",
-    "from src.display.plot_mean_w_ci import plot_mean_w_ci"
+    "# Internal inmport"
    ]
   },
   {
@@ -52,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "382efbf6",
    "metadata": {},
    "outputs": [],
@@ -63,30 +58,31 @@
     "        edges = [tuple(map(int, line.split())) for line in f]\n",
     "    # Extracting rows (source nodes) and columns (target nodes) from edges\n",
     "    row = np.array([edge[0]-1 for edge in edges])\n",
-    "    maxrow=np.max(row)\n",
+    "    maxrow = np.max(row)\n",
     "    col = np.array([edge[1]-1 for edge in edges])\n",
-    "    maxcol=np.max(col)\n",
-    "    maxtot=np.max((maxrow,maxcol))\n",
+    "    maxcol = np.max(col)\n",
+    "    maxtot = np.max((maxrow, maxcol))\n",
     "    # Data array (for a simple adjacency matrix, all edges have a weight of 1)\n",
     "    data = np.ones(len(edges), dtype=int)\n",
     "    # Create a COO matrix\n",
-    "    adj_matrix = coo_matrix((data, (row, col)),shape=(maxtot+1,maxtot+1))\n",
-    "    \n",
+    "    adj_matrix = coo_matrix((data, (row, col)), shape=(maxtot+1, maxtot+1))\n",
+    "\n",
     "    return adj_matrix\n",
     "\n",
-    "adj_matrix = read_graph_to_coo('../data/Douban.txt')\n",
-    "G0=adj_matrix+adj_matrix.T\n",
-    "G0.data[:]=1\n",
-    "n=G0.shape[0]\n",
     "\n",
-    "p=0.05\n",
-    "G,notG=pSampling(G0.tocoo(),p)\n",
-    "G=G.tocoo()\n"
+    "adj_matrix = read_graph_to_coo('../data/Douban.txt')\n",
+    "G0 = adj_matrix+adj_matrix.T\n",
+    "G0.data[:] = 1\n",
+    "n = G0.shape[0]\n",
+    "\n",
+    "p = 0.05\n",
+    "G, notG = pSampling(G0.tocoo(), p)\n",
+    "G = G.tocoo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "112145ff",
    "metadata": {},
    "outputs": [
@@ -100,14 +96,14 @@
     }
    ],
    "source": [
-    "# Graph description \n",
+    "# Graph description\n",
     "print('Nb of nodes:', G.shape[0])\n",
     "print('Nb of edges:', G.nnz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "88510879",
    "metadata": {},
    "outputs": [
@@ -123,7 +119,7 @@
     }
    ],
    "source": [
-    "#Graph plot\n",
+    "# Graph plot\n",
     "# Node positions using spring layout\n",
     "Gnx = coo_to_networkx(G)\n",
     "pos = nx.random_layout(Gnx, seed=42)\n",
@@ -142,7 +138,8 @@
     "\n",
     "# Draw the graph\n",
     "plt.figure(figsize=(6, 6))\n",
-    "nx.draw_networkx_nodes(Gnx, pos, node_size=node_sizes,node_color=node_colors, alpha=0.8)\n",
+    "nx.draw_networkx_nodes(Gnx, pos, node_size=node_sizes,\n",
+    "                       node_color=node_colors, alpha=0.8)\n",
     "# Draw curved edges\n",
     "for edge in Gnx.edges():\n",
     "    node1, node2 = edge\n",
@@ -168,18 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "998197d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choose prior\n",
-    "alpha=1\n",
-    "tau=0.\n",
+    "alpha = 1\n",
+    "tau = 0.\n",
     "hyper_beta = [0.01, 0.01]  # Improper prior on beta\n",
-    "hyper_c = [20, 0.5] \n",
-    "hyper_eta = [0.1, 0.1] # Improper prior on eta\n",
-    "objprior = GraphModel('Rapid',alpha,tau, hyper_beta, hyper_c, hyper_eta)\n",
+    "hyper_c = [20, 0.5]\n",
+    "hyper_eta = [0.1, 0.1]  # Improper prior on eta\n",
+    "objprior = GraphModel('Rapid', alpha, tau, hyper_beta, hyper_c, hyper_eta)\n",
     "\n",
     "\n",
     "# Parametter of the  MCMC Algorithm\n",
@@ -190,18 +187,18 @@
     "nchains = 2\n",
     "\n",
     "objmcmc = GraphMCMC(objprior, niter, nburn, thin, nadapt, nchains, store_w=True)\n",
-    "objmcmc.settings[\"hyper\"]={'rw_std': np.array([0.01,0.01,0.02]), 'MH_nb': 1}\n",
+    "objmcmc.settings[\"hyper\"] = {'rw_std': np.array([0.01, 0.01, 0.02]), 'MH_nb': 1}\n",
     "\n",
     "optional_arg = defaultdict(lambda: None)\n",
-    "optional_arg[\"decoupling\"]=True\n",
-    "optional_arg['nmass']=100\n",
+    "optional_arg[\"decoupling\"] = True\n",
+    "optional_arg['nmass'] = 100\n",
     "\n",
     "true_value = defaultdict(lambda: None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8ba1db35",
    "metadata": {},
    "outputs": [
@@ -249,10 +246,11 @@
     }
    ],
    "source": [
-    "graphmcmcsamples(objmcmc,G,optional_arg,true_value,output_dir=\"output_dir\",verbose=False)\n",
+    "graphmcmcsamples(objmcmc, G, optional_arg, true_value,\n",
+    "                 output_dir=\"output_dir\", verbose=False)\n",
     "\n",
     "[os.remove(f\"{d}/{f}\") for d, _, fs in os.walk(\"output_dir\", False) for f in fs]\n",
-    "[os.rmdir(d) for d, ds, _ in os.walk(\"output_dir\", False)]\n"
+    "[os.rmdir(d) for d, ds, _ in os.walk(\"output_dir\", False)]"
    ]
   },
   {
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "69190fe9",
    "metadata": {},
    "outputs": [
@@ -325,7 +323,7 @@
     }
    ],
    "source": [
-    "X=np.arange(0,niter,thin)\n",
+    "X = np.arange(0, niter, thin)\n",
     "\n",
     "plt.figure(dpi=100)\n",
     "for i in range(nchains):\n",
@@ -385,7 +383,7 @@
     "\n",
     "plt.figure(dpi=100)\n",
     "for i in range(nchains):\n",
-    "    plt.plot(X,np.sum(objmcmc.samples[i][\"w\"], axis=1))\n",
+    "    plt.plot(X, np.sum(objmcmc.samples[i][\"w\"], axis=1))\n",
     "plt.ylabel(r'sum_w', fontsize=14, rotation=90, labelpad=10)\n",
     "plt.xlabel('MCMC iterations', fontsize=14)\n",
     "plt.xticks(fontsize=12)\n",
@@ -407,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "39603ce8",
    "metadata": {},
    "outputs": [
@@ -483,9 +481,9 @@
     }
    ],
    "source": [
-    "#We order th weights by degree\n",
-    "ind= np.array(np.argsort(np.sum(G, axis=0)))\n",
-    "ind=ind[0][::-1]\n",
+    "# We order th weights by degree\n",
+    "ind = np.array(np.argsort(np.sum(G, axis=0)))\n",
+    "ind = ind[0][::-1]\n",
     "\n",
     "\n",
     "niter\n",
@@ -503,7 +501,7 @@
     "    ax.spines['right'].set_visible(False)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "# Plot some small weights\n",
     "ind2 = [100, 500, 1000]\n",
     "for i in ind2:\n",
@@ -531,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5ce84c2a",
    "metadata": {},
    "outputs": [
@@ -558,7 +556,7 @@
    ],
    "source": [
     "nburn = niter//2//thin\n",
-    "plot_mean_w_ci(G,objmcmc,w_true=None,nburn=nburn,dpi=100)"
+    "plot_mean_w_ci(G, objmcmc, w_true=None, nburn=nburn, dpi=100)"
    ]
   },
   {
@@ -571,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dd3b68cc",
    "metadata": {},
    "outputs": [
@@ -617,7 +615,8 @@
     }
    ],
    "source": [
-    "plot_posterior_predictive_degree(objmcmc,nburn=nburn,niter=niter,thin=thin,G=G,ndraws=100,dpi=100,ylim=(10**(-4), 1))"
+    "plot_posterior_predictive_degree(\n",
+    "    objmcmc, nburn=nburn, niter=niter, thin=thin, G=G, ndraws=100, dpi=100, ylim=(10**(-4), 1))"
    ]
   },
   {
@@ -630,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b3a30f36",
    "metadata": {},
    "outputs": [
@@ -654,17 +653,17 @@
     }
    ],
    "source": [
-    "#Convert to ArviZ\n",
-    "obmcmcarviz=to_arviz(objmcmc,nburn,thin)\n",
+    "# Convert to ArviZ\n",
+    "obmcmcarviz = to_arviz(objmcmc, nburn, thin)\n",
     "\n",
-    "#Gelman-Rubin convergence diagnostic\n",
-    "gr_stats = az.rhat(obmcmcarviz,method=\"identity\")\n",
+    "# Gelman-Rubin convergence diagnostic\n",
+    "gr_stats = az.rhat(obmcmcarviz, method=\"identity\")\n",
     "print(gr_stats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b4ef2796",
    "metadata": {},
    "outputs": [
@@ -677,21 +676,21 @@
     }
    ],
    "source": [
-    "#Multivariate GR, see Vats and Knudons, \"Revisiting the Gelman-Rubin diagnostic\"Statistical Science, (2021).\n",
+    "# Multivariate GR, see Vats and Knudons, \"Revisiting the Gelman-Rubin diagnostic\"Statistical Science, (2021).\n",
     "\n",
-    "R=np.array(gr_stats[\"w\"])\n",
-    "Rs=np.array(gr_stats[\"s\"])\n",
-    "Rbeta=float(gr_stats[\"beta\"])\n",
-    "Rc=float(gr_stats[\"c\"])\n",
-    "Reta=float(gr_stats[\"eta\"])\n",
-    "Rwrem=float(gr_stats[\"w_rem\"])\n",
-    "R=np.concatenate((R,Rs,[Rbeta,Rc,Reta,Rwrem]))\n",
-    "#R=np.array([Rbeta,Rc,Reta,Rwrem])\n",
-    "p=np.shape(R)[0]\n",
-    "n=(niter-nburn)//thin\n",
-    "x=n*R**2-n+1\n",
-    "Rtot=np.sqrt((n-1)/n+gmean(x)/n)\n",
-    "print('R_multi=',Rtot)\n"
+    "R = np.array(gr_stats[\"w\"])\n",
+    "Rs = np.array(gr_stats[\"s\"])\n",
+    "Rbeta = float(gr_stats[\"beta\"])\n",
+    "Rc = float(gr_stats[\"c\"])\n",
+    "Reta = float(gr_stats[\"eta\"])\n",
+    "Rwrem = float(gr_stats[\"w_rem\"])\n",
+    "R = np.concatenate((R, Rs, [Rbeta, Rc, Reta, Rwrem]))\n",
+    "# R=np.array([Rbeta,Rc,Reta,Rwrem])\n",
+    "p = np.shape(R)[0]\n",
+    "n = (niter-nburn)//thin\n",
+    "x = n*R**2-n+1\n",
+    "Rtot = np.sqrt((n-1)/n+gmean(x)/n)\n",
+    "print('R_multi=', Rtot)"
    ]
   }
  ],
